🐛 Prevent Popover to take up visible space when toggled off, and prevent selection of disabled items for List components

--- a/src/components/Popover/popover.module.scss
+++ b/src/components/Popover/popover.module.scss
@@ -9,6 +9,7 @@
     @include typography(primary);
     @include border-radius(md);
     @include size(w300px);
+    @include position('t-100%');
 
     transform: translateY(-5px);
     pointer-events: none;
